--- a/src/app/user-products/user-products.component.html
+++ b/src/app/user-products/user-products.component.html
@@ -1,44 +1,21 @@
 <main class="container pt-5">
   <div class="card mb-5">
-    <div class="card-header">Products</div>
+    <div class="card-header">Product Orders</div>
     <div class="card-block p-0">
       <table class="table table-bordered table-sm m-0">
         <thead class="">
         <tr>
           <th>#</th>
-          <th>Name</th>
-          <th>Registration Date</th>
-          <th>E-mail address</th>
-          <th>Premium Plan</th>
+          <th>Product Name</th>
         </tr>
         </thead>
         <tbody>
-        <tr>
-          <td>
-          </td>
-          <td>John Lilki</td>
-          <td>September 14, 2013</td>
-          <td>jhlilk22@yahoo.com</td>
-          <td>No</td>
-        </tr>
-        <tr>
-          <td>
+        <!--<tr *ngFor="let product of getProducts">-->
+          <!--<td>-->
+          <!--</td>-->
+          <!--<td>{{product.name}}</td>-->
 
-          </td>
-          <td>John Lilki</td>
-          <td>September 14, 2013</td>
-          <td>jhlilk22@yahoo.com</td>
-          <td>No</td>
-        </tr>
-        <tr>
-          <td>
-
-          </td>
-          <td>John Lilki</td>
-          <td>September 14, 2013</td>
-          <td>jhlilk22@yahoo.com</td>
-          <td>No</td>
-        </tr>
+        <!--</tr>-->
         </tbody>
       </table>
     </div>
